Fixed: Hypertablev1 z-index on empty state

--- a/app/styles/hypertable.less
+++ b/app/styles/hypertable.less
@@ -36,6 +36,7 @@
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0);
+    z-index: 21;
   }
 
   &--error {
